# vscode_demo

./: .gitignore  README.md  chiave.txt  main_file.txt  pippo  pippo.txt  pyproject.toml
dir1/: f1.txt  f2.txt
src/git_demo/: main.py
