[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/git_demo"]


[project]
name = "git_demo"
version = "0.1.0"
description = "Small demo project: EMODnet bathymetry downloader using xarray."
readme = "README.md"
requires-python = ">=3.9"
authors = [ { name = "Stefano Piani", email = "spiani@ogs.it" } ]

dependencies = [
  "netcdf4>=1.7.2",
  "xarray>=2022.10.0",
]

[project.scripts]
main = "git_demo.main:main"
